# ngenix_test_task

./: README.md  main.py  pyproject.toml
src/: archiver.py  generator.py  parser.py  processor.py
tests/: conftest.py  test_archiver.py  test_parser.py  test_processor.py
